# mk-meili-mgn

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  config-example.json
.github/workflows/: build.yml  docker.yml
src/: aid.rs  aid_series.rs  client.rs  config.rs  database.rs  main.rs  meili.rs  struct.rs
