[package]
name = "mk-meili-mgn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.37"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["with-chrono-0_4"] }
reqwest = { version = "0.12.2", features = ["json", "rustls-tls"] }
indicatif = "0.17.8"
console = "0.15.8"

[profile.release]
opt-level = 3
lto = true
strip = true